Call WillPaint() on all descendant view observers.  b=517772 r=bzbarsky r=roc